[gd_scene load_steps=2 format=3 uid="uid://c5m0g0vhm4xs8"]

[ext_resource type="Script" path="res://scripts/Task1_AlignCrystals.gd" id="1_task1"]

[node name="Task1_AlignCrystals" type="Node2D"]
script = ExtResource("1_task1")

[node name="Target" type="ColorRect" parent="."]
offset_left = 350.0
offset_top = 250.0
offset_right = 410.0
offset_bottom = 310.0
color = Color(1, 1, 0, 0.5)

[node name="Crystal" type="ColorRect" parent="."]
offset_left = 150.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
color = Color(0, 1, 1, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.0
autostart = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 100.0

[node name="LabelInstructions" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Align the Crystals!"
theme_override_font_sizes/font_size = 16

[node name="LabelTimer" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Time: 10"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
